Fix vertical aligning of icons

--- a/class-rules.css
+++ b/class-rules.css
@@ -18,7 +18,7 @@
 	max-height: 100%;
 	width: var(--icon-size, 1em);
 	height: var(--icon-size, 1em);
-	vertical-align: bottom;
+	vertical-align: middle;
 }
 
 .round {
